# scontainer-demo

./: .gitignore  README.md  manage.py  requirements.txt
datamodel/: common.py  examples.py  jsonschema.py  schema.py
datamodel/definitions/: data.py  path.py  preliminaries.py  template.py
datamodel/examples/: 1_flatten_unflatten.py  2_split_summarize.py  3_coverage_of_a_template.py  4_operation_nested.py  5_operation_extract.py  6_operation_insert.py  7_operation_delete.py  8_operation_move.py  9_operation_reference.py
datamodel/tests/: test_paths.py  test_template.py
experiments/: run_test.py
experiments/cpp/: CMakeLists.txt  main.cpp
experiments/cpp/json-schema-validator/test/issue-9/: bar.json
experiments/cpp/json-schema-validator/test/issue-9/foo/baz/qux/: qux.json
experiments/datasets/: A-dataset-10000-fixed.json  A-dataset-10000-variable.json  A-dataset-100000-variable.json  A-dataset-50000-fixed.json  A-dataset-50000-variable.json  A-schema-fixed.json  A-schema-variable-anyOf.json  A-schema-variable.json
frontend/: config-overrides.js  package-lock.json  package.json
frontend/src/: Colors.js  Container.js  ContainerBox.js  index.js  var.js
scontainer/: asgi.py  settings.py  urls.py  views.py  wsgi.py
static/: asset-manifest.json  index.html
static/js/: main.fe05493d.js  main.fe05493d.js.map
